[ClickDeploy] [CRM-123] Sample on  GIT

--- a/classes/GenericCar.cls
+++ b/classes/GenericCar.cls
@@ -1,7 +1,10 @@
 public class GenericCar {
-    public  GenericCar(string color,string model){
+    public  GenericCar(string color,string design){
          this.color = color;
+        //this.model = model;
+        this.design = design;
     }
     public string color;
-    public string model;
+    //public string model;
+    public string design;
 }
